# latex-notes-codespaces

./: README.md
gset_question_bank/: README.md  pyproject.toml  temp.md  temp.txt
gset_question_bank/output/book/: chapter_1.tex  main.tex  markdown_content.md
gset_question_bank/output/chapters/: chapter_1_General Studies.md
gset_question_bank/output/extracted_questions/: dec24p1_questions.json
gset_question_bank/output/temp/: dec24p1_text.txt
gset_question_bank/src/notes/: crew.py  main.py
gset_question_bank/src/notes/config/: agents.yaml  tasks.yaml
gset_question_bank/src/notes/tools/: file_tool.py  latex_tool.py  ocr_tool.py
notes/: pyproject.toml  report.md
notes/src/notes/: crew.py  main.py
notes/src/notes/config/: agents.yaml  tasks.yaml
