[project]
name = "notes"
version = "0.1.0"
description = "notes using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "litellm>=1.75.3",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]

[project.scripts]
notes = "notes.main:run"
run_crew = "notes.main:run"
train = "notes.main:train"
replay = "notes.main:replay"
test = "notes.main:test"
run_with_trigger = "notes.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
